--- a/test.html
+++ b/test.html
@@ -1,29 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Test</title>
-</head>
-<body>
-  <script src="dist/browser-module-sandbox.js"></script>
-  <script>
-    var sandbox = Sandbox({
-      name: 'sandbox',
-      cdn: 'https://wzrd.now.sh',
-      cacheOpts: {
-        inMemory: true
-      },
-      iframeStyle: 'body, html { height: 100%; width: 100%; overflow: auto }',
-      iframeSandbox: [
-        'allow-forms',
-        'allow-popups',
-        'allow-scripts',
-        'allow-same-origin',
-        'allow-modals'
-      ]
-    });
+  <head>
+    <meta charset="utf-8" />
+    <title>Test</title>
+  </head>
+  <body>
+    <!-- <script src="dist/browser-module-sandbox.js"></script> -->
+    <script src="dist/browser-module-sandbox.min.js"></script>
+    <script>
+      var sandbox = Sandbox({
+        name: "sandbox",
+        // cdn: 'http://localhost:8080',
+        cdn: "https://wzrd.now.sh",
+        cacheOpts: {
+          inMemory: true
+        },
+        iframeStyle: "body, html { height: 100%; width: 100%; overflow: auto }",
+        iframeSandbox: [
+          "allow-forms",
+          "allow-popups",
+          "allow-scripts",
+          "allow-same-origin",
+          "allow-modals"
+        ]
+      });
 
-    sandbox.bundle('console.log(require("underscore"))', {'underscore': '1.3.3'});
-  </script>
-</body>
+      // var code  = `
+      //   "use strict";
+
+      //   var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");
+
+      //   var _react = _interopRequireDefault(require("react"));
+
+      //   console.log("react", _react.default);
+      // `;
+      // sandbox.bundle(code, {});
+      sandbox.bundle('console.log(require("nooop"))', {});
+    </script>
+  </body>
 </html>
